changed file path for pictures

--- a/New site Altitude - Copy/index.html
+++ b/New site Altitude - Copy/index.html
@@ -6,7 +6,7 @@
     <title>Altitude Fitness Management</title>
     <link
       rel="shortcut icon"
-      href="/pictures/MicrosoftTeams-image (3).png"
+      href="/New site Altitude - Copy/pictures/3.avif"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="styles.css" />
@@ -38,7 +38,7 @@
       <nav class="navbar">
         <div class="navbar__container">
           <img
-            src="/pictures/MicrosoftTeams-image (2).png"
+            src="/New site Altitude - Copy/pictures/MicrosoftTeams-image (2).png"
             alt="logo"
             id="navbar__logo"
           />
@@ -89,7 +89,7 @@
       <div class="main__container_1">
         <div class="main__img--container">
           <div class="main__img--card_1">
-            <img src="/pictures/wallpaperflare.com_wallpaper.jpg" />
+            <img src="/New site Altitude - Copy/pictures/wallpaperflare.com_wallpaper.jpg" />
           </div>
         </div>
         <div class="main__content_1">
@@ -128,7 +128,7 @@
         </div>
         <div class="main__img--container">
           <div class="main__img--card_2">
-            <img src="/pictures/AdobeStock_80447539.jpeg" />
+            <img src="/New site Altitude - Copy/pictures/AdobeStock_80447539.jpeg" />
           </div>
         </div>
       </div>
@@ -230,7 +230,7 @@
         <div class="column">
           <div class="card">
             <div class="img-container">
-              <img src="/pictures/3.avif" />
+              <img src="/New site Altitude - Copy/pictures/3.avif" />
             </div>
             <h3>Pedro De Freitas Cedeno</h3>
             <p>Founder and CEO</p>
@@ -254,7 +254,7 @@
         <div class="column">
           <div class="card">
             <div class="img-container">
-              <img src="/pictures/1.avif" />
+              <img src="/New site Altitude - Copy/pictures/1.avif" />
             </div>
             <h3>Marko Jakovljevic</h3>
             <p>Web Developer</p>
@@ -278,7 +278,7 @@
         <div class="column">
           <div class="card">
             <div class="img-container">
-              <img src="/pictures/2.webp" />
+              <img src="/New site Altitude - Copy/pictures/2.webp" />
             </div>
             <h3>Matthew Wakumoto</h3>
             <p>Social Media Manager</p>
